# tauri-modbus

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.svelte  grid.svelte  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cfg.rs  main.rs
src/css/: main.pcss  swalert.css
